# flake8-pickle

./: README.md  flake8_pickle.py  pyproject.toml  setup.cfg
tests/: test_flake8_pickle.py
