[metadata]
name=flake8_pickle
version=0.1.0
# description = "A Flake8 plugin to prevent the unsafe use of pickle"
# authors = ["Brian London"]

[options]
py_modules = flake8_pickle
install_requires =
    flake8>=3.7
    importlib-metadata>=0.9;python_version<"3.8"
python_requires = >=3.7

[options.entry_points]
flake8.extension =
    PKL=flake8_pickle:Plugin
